Change title from 'Nimmy's Restaurant' to 'Restaurant'

--- a/OOPS.html
+++ b/OOPS.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Nimmy's Restaurant</title>
+<title> Restaurant</title>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
 <style>
     body {
